syntax = "proto3";
package ciao.time_tracking.time_type;

import "ciao/common/color.proto";

// Time type data
message TimeType {
  // Unique id (UUID)
  string id = 1;
  string name = 2;
  string shorthand = 3;
  ciao.common.Color color = 4;
  optional string icon = 5;
  TimeTypeOptions options = 6;
}

message TimeTypeOptions {
  bool bookable = 1;
  bool absence = 2;
}
